# aula15_bootcamp_python

./: README.md  fast_api_test.py  pyproject.toml
