[tool.poetry]
name = "aula15-bootcamp-python"
version = "0.1.0"
description = ""
authors = ["Ricardo Marques <dataricardom@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
faker = "^35.0.0"
fastapi = "^0.115.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
